[package]
name = "api_yahoo_finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# reqwest - need openssl-dev apt install that shit

[dependencies]
scraper = "0.17.1"
reqwest = { version = "0.11.20", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
serde = "1.0.188"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]